# LicenseGenerator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LicenseGenerator.cpp  LicenseGenerator.h  main.cpp  server.py  vcpkg.json
